add spooky font

--- a/src/scss/_col.scss
+++ b/src/scss/_col.scss
@@ -1,6 +1,9 @@
 // https://lospec.com/palette-list/lost-century
-$paperRed   : #79444a;
+// $paperRed   : #79444a;
 $paperGreen : #77743b;
+
+// https://lospec.com/palette-list/red-horns
+$paperRed: #4d1313;
 
 
 
@@ -14,4 +17,5 @@ $paperz6 : #bda583;
 $paperz7 : #cdba94;
 $paperz8 : #e6ceac;
 $paperBlack : $paperz1;
+// $paperBlack : #f00;
 $paperWhite : $paperz6;
