--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,8 +1,17 @@
+@font-face {
+  font-family: paint-number;
+  src: url("../../public/fonts/edo.ttf");
+}
+@font-face {
+  font-family: paint-text;
+  src: url("../../public/fonts/PAINP___.TTF");
+}
 .card-holder {
   border: 3px dashed orange;
-  padding: 1em;
-  background-color: #000;
-  box-shadow: inset 0 0 1em 0 red;
+  padding: 0em;
+  margin: 5em;
+  background-color: #ffd;
+  box-shadow: 0 0 1em 0 red;
   display: inline-block;
 }
 
@@ -11,28 +20,86 @@ div.card {
   text-align: center;
   display: block;
   font-size: calc(10 * var(--magic, 0.1px));
+  height: 9.5em;
+  width: 6.6428571429em;
+  padding: 0.25em;
+  color: #292418;
+}
+div.card svg {
+  fill: #292418;
+}
+div.card object {
+  fill: red !important;
+  color: red !important;
 }
 div.card .card-title {
   display: flex;
   justify-content: center;
-  border-bottom: 2px solid #292418;
+  border-bottom: 5px solid #292418;
+  height: 16%;
+  font-family: "paint-number", monospace;
 }
 div.card .imgbox {
   position: relative;
+  border-bottom: 5px solid #292418;
+  height: 40%;
 }
 div.card .imgbox object {
-  object-fit: cover;
+  object-fit: contain;
   height: 100%;
   width: 100%;
 }
 div.card .imgbox .cost {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 0.25em;
+  display: flex;
+  gap: 0.1em;
 }
 div.card .imgbox .cost svg {
+  fill: #4d1313;
   height: 1em;
-  width: 1em;
+  width: 0.5em;
+}
+div.card .content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 1em;
+  height: 40%;
+}
+div.card .content p {
+  margin: 0;
+  padding: 0;
+}
+div.card .content .stat {
+  flex-grow: 0;
+  flex-basis: 20%;
+  position: relative;
+}
+div.card .content .stat svg {
+  position: static;
+  left: 0;
+  right: 0;
+  top: auto;
+  bottom: auto;
+  width: 100%;
+  height: fit-content;
+}
+div.card .content .stat p {
+  position: static;
+  left: 0;
+  right: 0;
+  width: 100%;
+  top: auto;
+  bottom: auto;
+  margin: 0;
+  padding: 0;
+  color: #4d1313;
+  font-family: "paint-number", monospace;
+}
+div.card .content .sigils {
+  flex-grow: 1;
 }
 
 /*# sourceMappingURL=card.css.map */
