this structure is making my head spin

--- a/src/scss/_col.scss
+++ b/src/scss/_col.scss
@@ -3,8 +3,14 @@
 $paperGreen : #77743b;
 
 // https://lospec.com/palette-list/red-horns
-$paperRed: #4d1313;
+// $paperRed: #4d1313; //too dark
 
+// https://lospec.com/palette-list/apollo
+$paperRed: #a53030;
+
+
+//https://lospec.com/palette-list/vinik24
+// $paperRed : #9a4f50 ;
 
 
 // https://lospec.com/palette-list/justparchment8
@@ -18,4 +24,27 @@ $paperz7 : #cdba94;
 $paperz8 : #e6ceac;
 $paperBlack : $paperz1;
 // $paperBlack : #f00;
+$paperFaded : $paperz2;
 $paperWhite : $paperz6;
+
+
+
+
+
+
+
+
+/*
+https://lospec.com/palette-list/paper-pixels
+https://lospec.com/palette-list/papier-4 too yellow/cold
+
+https://lospec.com/palette-list/escape
+https://lospec.com/palette-list/ty-forgotten-times-9
+https://lospec.com/palette-list/1bit-monitor-glow
+https://lospec.com/palette-list/steam-lords
+https://lospec.com/palette-list/steam-lords
+https://lospec.com/palette-list/lost-century-24
+https://lospec.com/palette-list/daylight-16
+https://lospec.com/palette-list/paper-pixels
+https://lospec.com/palette-list/vinik24
+*/
