--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,3 +1,17 @@
+/*
+https://lospec.com/palette-list/paper-pixels
+https://lospec.com/palette-list/papier-4 too yellow/cold
+
+https://lospec.com/palette-list/escape
+https://lospec.com/palette-list/ty-forgotten-times-9
+https://lospec.com/palette-list/1bit-monitor-glow
+https://lospec.com/palette-list/steam-lords
+https://lospec.com/palette-list/steam-lords
+https://lospec.com/palette-list/lost-century-24
+https://lospec.com/palette-list/daylight-16
+https://lospec.com/palette-list/paper-pixels
+https://lospec.com/palette-list/vinik24
+*/
 @font-face {
   font-family: paint-number;
   src: url("../../public/fonts/edo.ttf");
@@ -10,9 +24,17 @@
   border: 3px dashed orange;
   padding: 0em;
   margin: 5em;
-  background-color: #ffd;
   box-shadow: 0 0 1em 0 red;
   display: inline-block;
+  resize: both;
+  overflow: scroll;
+}
+
+.testholders {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 5em;
 }
 
 div.card {
@@ -24,13 +46,7 @@ div.card {
   width: 6.6428571429em;
   padding: 0.25em;
   color: #292418;
-}
-div.card svg {
-  fill: #292418;
-}
-div.card object {
-  fill: red !important;
-  color: red !important;
+  --card-rem: calc(10*var(--magic,0.1px));
 }
 div.card .card-title {
   display: flex;
@@ -57,7 +73,7 @@ div.card .imgbox .cost {
   gap: 0.1em;
 }
 div.card .imgbox .cost svg {
-  fill: #4d1313;
+  fill: #a53030;
   height: 1em;
   width: 0.5em;
 }
@@ -66,6 +82,7 @@ div.card .content {
   justify-content: space-between;
   align-items: flex-end;
   gap: 1em;
+  width: 6.6428571429em;
   height: 40%;
 }
 div.card .content p {
@@ -74,28 +91,32 @@ div.card .content p {
 }
 div.card .content .stat {
   flex-grow: 0;
-  flex-basis: 20%;
   position: relative;
+  width: 1.75em;
+  height: 100%;
 }
 div.card .content .stat svg {
-  position: static;
+  position: absolute;
   left: 0;
   right: 0;
-  top: auto;
-  bottom: auto;
+  bottom: 0;
+  fill: #524839;
   width: 100%;
   height: fit-content;
 }
 div.card .content .stat p {
-  position: static;
-  left: 0;
-  right: 0;
-  width: 100%;
-  top: auto;
-  bottom: auto;
   margin: 0;
   padding: 0;
-  color: #4d1313;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: calc(1.75 * var(--card-rem));
+  line-height: calc(1.5 * var(--card-rem));
+  vertical-align: center;
+  font-size: 1em;
+  text-shadow: 2px 4px 15px #000, 0px 0px 15px #000;
+  color: #a53030;
   font-family: "paint-number", monospace;
 }
 div.card .content .sigils {
