--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -105,6 +105,9 @@ div.card{
         }
 
         .stat{
+            width: 20%;
+            flex-basis: 20%;
+
             flex-grow: 0;
             // flex-basis: 20%;
             position: relative;
@@ -149,7 +152,21 @@ div.card{
             }
         }
         .sigils{
-            flex-grow: 1;
+            // flex-grow: 1;
+            flex-basis: 60%;
+            width: 60%;
+            font-size: 6px;
+            
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            align-items: center;
+            
+            object[type="image/svg+xml"], svg{
+                display: inline-block;
+                height: 100%;
+                width: 100%;
+            }
         }
     }
 }
