rowified the cards

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -29,12 +29,71 @@ https://lospec.com/palette-list/vinik24
   border: 3px dashed orange;
   padding: 0em;
   margin: 0.5em;
-  box-shadow: 0 0 1em 0 red;
+  box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
   display: inline-block;
   resize: both;
   overflow: scroll;
 }
+.card-holder[owner="1"] {
+  --box-shadow-col: red;
+  border-color: orange;
+}
+.card-holder[owner="0"] {
+  border-color: purple;
+  --box-shadow-col: blue;
+}
 
+div[animations=true] .card-holder {
+  box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
+}
+div[animations=true] .card-holder[owner="1"] {
+  --box-shadow-col: red;
+  animation-delay: 0;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-name: unrotate;
+}
+div[animations=true] .card-holder[owner="1"]:hover {
+  animation-name: rotate;
+}
+div[animations=true] .card-holder[owner="0"] {
+  --box-shadow-col: blue;
+}
+
+@keyframes rotate {
+  from {
+    z-index: unset;
+    transform: rotate(180deg);
+    box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
+  }
+  20% {
+    z-index: 1;
+    transform: rotate(180deg);
+    box-shadow: 0 0 3em 0 var(--box-shadow-col), 0 0 1em 0 #000;
+  }
+  to {
+    z-index: 1;
+    transform: rotate(0deg);
+    box-shadow: 0 0 3em 0 var(--box-shadow-col), 0 0 1em 0 #000;
+  }
+}
+@keyframes unrotate {
+  to {
+    z-index: unset;
+    transform: rotate(180deg);
+    box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
+  }
+  80% {
+    z-index: 1;
+    transform: rotate(180deg);
+    box-shadow: 0 0 3em 0 var(--box-shadow-col), 0 0 1em 0 #000;
+  }
+  from {
+    z-index: 1;
+    transform: rotate(0deg);
+    box-shadow: 0 0 3em 0 var(--box-shadow-col), 0 0 1em 0 #000;
+  }
+}
 .testholders-css {
   display: flex;
   justify-content: center;
