--- a/src/scss/_col.scss
+++ b/src/scss/_col.scss
@@ -28,6 +28,10 @@ $paperFaded : $paperz2;
 $paperWhite : $paperz6;
 
 
+$paperNoteBorder: $paperz3;
+$paperNoteWhite: $paperz7;
+$paperNoteBlack: $paperz2;
+
 
 
 
