--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -17,97 +17,6 @@
 }
 
 
-.card-holder{
-    border: 3px dashed orange;
-    padding: 0em;
-    margin: 0.5em;
-    // background-color: #;
-    box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
-    display: inline-block;
-    resize: both;
-    overflow: scroll;
-
-    &[owner = "1"]{
-        --box-shadow-col: red;
-        // --rangle : 180deg;
-        border-color: orange;
-        // transform: rotate(var(--rangle));
-    }
-    &[owner = "0"]{
-        border-color: purple;
-        --box-shadow-col: blue;
-    }
-}
-
-
-div[animations = "true"]{
-    .card-holder{
-        box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
-
-        &[owner = "1"]{
-            --box-shadow-col: red;
-    
-            animation-delay: 0;
-            animation-duration: 1s;
-            animation-fill-mode: both;
-            animation-name: unrotate;
-            &:hover{
-                animation-name: rotate;
-            }
-        }
-        &[owner = "0"]{
-            --box-shadow-col: blue;
-        }
-    }
-}
-
-
-
-
-@keyframes rotate {
-    from{
-        z-index: unset;
-        transform: rotate(180deg);
-        box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
-    }
-    20%{
-        z-index:1;
-        transform: rotate(180deg);
-        box-shadow: 0 0 3em 0 var(--box-shadow-col), 0 0 1em 0 #000;
-    }
-    to{
-        z-index:1;
-        transform: rotate(0deg);
-        box-shadow: 0 0 3em 0 var(--box-shadow-col), 0 0 1em 0 #000;
-    }
-}
-@keyframes unrotate {
-    to{
-        z-index: unset;
-        transform: rotate(180deg);
-        box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
-    }
-    80%{
-        z-index:1;
-        transform: rotate(180deg);
-        box-shadow: 0 0 3em 0 var(--box-shadow-col), 0 0 1em 0 #000;
-    }
-    from{
-        z-index:1;
-        transform: rotate(0deg);
-        box-shadow: 0 0 3em 0 var(--box-shadow-col), 0 0 1em 0 #000;
-    }
-}
-
-
-.testholders-css{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-
-    gap:5em;
-}
 
 
 .card2{
@@ -235,18 +144,56 @@ div.card{
             // flex-grow: 1;
             flex-basis: 60%;
             width: 60%;
-            font-size: 6px;
             
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
             align-items: center;
-            
-            object[type="image/svg+xml"], svg{
-                display: inline-block;
-                height: 100%;
-                width: 100%;
+
+            .sigil{
+                // font-size: calc(4 * var(--magic));
+
+                position: relative;
+
+                svg{
+                    display: inline-block;
+                    height: 100%;
+                    width: 100%;
+                }
+                .tooltip{
+                    position: absolute;
+                    top:90%;
+                    left:10%;
+                    width: 40ch;
+                    text-align: left;
+                    
+                    font-size: 1rem;
+                    z-index: 3;
+                
+                    padding:0.5em;
+
+
+                    background-color: col.$paperNoteWhite;
+                    color: col.$paperNoteBlack;
+                    border: 10px solid col.$paperNoteBorder;
+                    display: none;
+
+                    border-radius: 10px;
+
+                    .title{
+                        font-family: "paint-number",serif;
+                        text-decoration: col.$paperRed underline;
+                        text-decoration-thickness: 2px;
+                        font-weight: 600;
+                    }
+                }
+                div:hover ~ .tooltip, .tooltip:hover{
+                    display: block;
+                }
             }
+
+            
+
         }
     }
 }
