--- a/src/css/game.css
+++ b/src/css/game.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
 https://lospec.com/palette-list/paper-pixels
 https://lospec.com/palette-list/papier-4 too yellow/cold
@@ -28,6 +29,8 @@ https://lospec.com/palette-list/vinik24
   flex-wrap: nowrap;
   height: 100vh;
   width: 100%;
+  background-image: url("../../public/img/pexels-szabó-viktor-3227984.jpg");
+  background-size: 60%;
 }
 
 .left, .right {
@@ -74,6 +77,32 @@ https://lospec.com/palette-list/vinik24
   transition-timing-function: linear;
 }
 .center .Cardrow[type=table] .card-holder.hascard:hover {
+  flex-basis: 30%;
+}
+.center .Cardrow[type=hand] {
+  height: 20vh;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  overflow-x: scroll;
+  align-self: flex-end;
+}
+.center .Cardrow[type=hand][owner="1"] {
+  align-self: flex-start;
+}
+.center .Cardrow[type=hand] .card-holder {
+  height: 100%;
+  /*
+  flex-grow: 1;
+  flex-basis: 25%;
+  // min-width: 20%;
+  min-width: 15%;
+  */
+  transition: flex-basis 0.8s;
+  transition-timing-function: linear;
+}
+
+div[grow=true] .Cardrow[type=table] > .card-holder.hascard:hover {
   flex-basis: 30%;
 }
 
