--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -36,13 +36,17 @@ div.card{
     background-color: col.$paperWhite;
     text-align: center;
     display: block;
-    font-size: calc(10*var(--magic,0.1px));
+    font-size: calc(10*var(--magic,0.1px)); //100 * --magic == height  //1em  = 10*--magic
     height: calc(10em - 2 * $edge);
-    width: calc(10em * 5 / 7 - 2 * $edge);
+    // width: calc(10em * 5 / 7 - 2 * $edge);
+    display:inline-block;
     padding:$edge;
 
     // font-family: "selected", monospace;
     color: col.$paperBlack;
+
+
+    border-radius: calc(3s* var(--magic));
 
     --card-rem: calc(10*var(--magic,0.1px));
 
