--- a/src/css/game.css
+++ b/src/css/game.css
@@ -42,19 +42,13 @@ https://lospec.com/palette-list/vinik24
   flex-direction: column;
   flex-wrap: nowrap;
   height: 50%;
-}
-
-.top {
-  justify-content: flex-end;
-}
-
-.bottom {
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .center {
   flex-basis: 60%;
   flex-grow: 1;
+  width: 60%;
   border: 2px dashed #8a8;
   height: 100%;
 }
@@ -80,24 +74,23 @@ https://lospec.com/palette-list/vinik24
   flex-basis: 30%;
 }
 .center .Cardrow[type=hand] {
-  height: 20vh;
-  display: flex;
-  flex-wrap: nowrap;
+  width: 100%;
+  display: inline-flex;
   flex-direction: row;
-  overflow-x: scroll;
-  align-self: flex-end;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  justify-self: flex-end;
 }
 .center .Cardrow[type=hand][owner="1"] {
   align-self: flex-start;
 }
 .center .Cardrow[type=hand] .card-holder {
-  height: 100%;
-  /*
+  max-width: 15%;
+  min-width: 0;
+  overflow: hidden;
   flex-grow: 1;
   flex-basis: 25%;
-  // min-width: 20%;
-  min-width: 15%;
-  */
   transition: flex-basis 0.8s;
   transition-timing-function: linear;
 }
@@ -117,7 +110,6 @@ div[grow=true] .Cardrow[type=table] > .card-holder.hascard:hover {
   margin: 0.5em;
   box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
   display: inline-block;
-  resize: both;
 }
 .card-holder[owner="1"] {
   --box-shadow-col: red;
