--- a/src/css/game.css
+++ b/src/css/game.css
@@ -41,8 +41,11 @@ https://lospec.com/palette-list/vinik24
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  height: 50%;
   justify-content: space-between;
+}
+
+.bottom {
+  flex-grow: 1;
 }
 
 .center {
@@ -51,6 +54,11 @@ https://lospec.com/palette-list/vinik24
   width: 60%;
   border: 2px dashed #8a8;
   height: 100%;
+  box-sizing: border-box;
+  padding-bottom: 3vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 .center .Cardrow[type=table] {
   width: 100%;
@@ -59,9 +67,6 @@ https://lospec.com/palette-list/vinik24
   flex-wrap: nowrap;
   justify-content: space-around;
   align-items: flex-start;
-}
-.center .Cardrow[type=table][owner="1"] {
-  align-items: flex-end;
 }
 .center .Cardrow[type=table] .card-holder {
   flex-grow: 1;
@@ -80,19 +85,32 @@ https://lospec.com/palette-list/vinik24
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: flex-start;
-  justify-self: flex-end;
-}
-.center .Cardrow[type=hand][owner="1"] {
-  align-self: flex-start;
+  position: relative;
+  align-items: flex-end;
 }
 .center .Cardrow[type=hand] .card-holder {
-  max-width: 15%;
+  font-size: calc(10 * var(--magic, 0.1px));
+  box-shadow: -0.5em 0 0.6em 0em #000;
+  transition: left 0.3s ease-in, transform 0.2s ease-in;
+  position: relative;
+  left: 0;
   min-width: 0;
-  overflow: hidden;
+  max-width: 25%;
   flex-grow: 1;
   flex-basis: 25%;
-  transition: flex-basis 0.8s;
-  transition-timing-function: linear;
+}
+.center .Cardrow[type=hand] .card-holder:not(:first-child) {
+  margin-left: -1vw;
+}
+.center .Cardrow[type=hand] .card-holder:hover {
+  transform: translateY(-4vh);
+  z-index: 1;
+  box-shadow: -0.5em 0 0.6em 0em #000;
+  transition: transform 0.2s ease-out;
+}
+.center .Cardrow[type=hand] .card-holder:hover ~ .card-holder {
+  left: calc(1vw + 0.5em);
+  transition: left 0.3s ease-out;
 }
 
 div[grow=true] .Cardrow[type=table] > .card-holder.hascard:hover {
@@ -104,18 +122,18 @@ div[grow=true] .Cardrow[type=table] > .card-holder.hascard:hover {
   width: 100%;
 }
 
-.card-holder {
+.Cardrow[type=table] .card-holder {
   border: 3px dashed orange;
   padding: 0em;
   margin: 0.5em;
   box-shadow: 0 0 1em 0 var(--box-shadow-col), 0 0 0 0 #000;
   display: inline-block;
 }
-.card-holder[owner="1"] {
+.Cardrow[type=table] .card-holder[owner="1"] {
   --box-shadow-col: red;
   border-color: orange;
 }
-.card-holder[owner="0"] {
+.Cardrow[type=table] .card-holder[owner="0"] {
   border-color: purple;
   --box-shadow-col: blue;
 }
