--- a/src/scss/game.scss
+++ b/src/scss/game.scss
@@ -56,6 +56,7 @@
 
 
     .Cardrow[type="table"]{
+        
         width: 100%;
 
         display: flex;
@@ -65,6 +66,9 @@
         align-items:flex-start;
 
         .card-holder{
+            padding: 0em;
+            margin: 0.5em;
+
             flex-grow: 1;
             flex-basis: 25%;
             // min-width: 20%;
@@ -156,7 +160,7 @@ div[grow="true"] .Cardrow[type="table"] > .card-holder.hascard:hover{
     width: 100%;
 }
 
-
+/*
 .Cardrow[type="table"] .card-holder{
     border: 3px dashed orange;
     padding: 0em;
@@ -178,7 +182,7 @@ div[grow="true"] .Cardrow[type="table"] > .card-holder.hascard:hover{
         --box-shadow-col: blue;
     }
 }
-
+*/
 
 div[animations = "true"]{
     .card-holder{
