--- a/src/css/game.css
+++ b/src/css/game.css
@@ -24,7 +24,7 @@ https://lospec.com/palette-list/vinik24
 .game {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-wrap: nowrap;
   height: 100vh;
@@ -49,16 +49,22 @@ https://lospec.com/palette-list/vinik24
 }
 
 .center {
+  max-width: 60vh;
   flex-basis: 60%;
   flex-grow: 1;
   width: 60%;
   border: 2px dashed #8a8;
   height: 100%;
   box-sizing: border-box;
-  padding-bottom: 3vh;
+  padding-bottom: 2vh;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
+}
+.center h1 {
+  text-align: center;
+  margin: 0.5em 0;
+  color: #a53030;
 }
 .center .Cardrow[type=table] {
   width: 100%;
