--- a/src/scss/game.scss
+++ b/src/scss/game.scss
@@ -14,7 +14,7 @@
 .game{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-wrap: nowrap;
     height:100vh;
@@ -41,6 +41,7 @@
 
 
 .center{
+    max-width: 60vh;
     flex-basis: 60%;
     flex-grow: 1;
     // overflow-y: scroll;
@@ -48,12 +49,19 @@
     border:2px dashed #8a8;
     height:100%;
     box-sizing: border-box;
-    padding-bottom: 3vh;
+    padding-bottom: 2vh;
 
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
 
+
+
+    h1{
+        text-align: center;
+        margin: 0.5em 0;
+        color: col.$paperRed;
+    }
 
     .Cardrow[type="table"]{
         
