--- a/src/css/card.css
+++ b/src/css/card.css
@@ -67,6 +67,7 @@ div.card {
   height: calc(100 * var(--magic, 0.1em) - 0.5em);
   display: inline-block;
   padding: 0.25em;
+  cursor: grab;
   color: #292418;
   border-radius: calc(3 * var(--magic));
   --card-rem: calc(10*var(--magic,0.1px));
